# nChain-AI

./: .gitignore  README.md  foundry.toml
assets/: demo.md
backend/: .env.example  README.md  context.MD  integration.MD  pyproject.toml  pytest.ini
backend/app/: config.py  db.py  main.py
backend/app/admin/: router.py  service.py
backend/app/auth/: router.py  schemas.py  service.py
backend/app/chain_sync/: router.py  schemas.py  service.py
backend/app/location/: router.py  schemas.py  service.py
backend/app/maps/: router.py  schemas.py  service.py
backend/app/marketplace/: router.py  schemas.py  service.py
backend/app/pricing/: router.py  schemas.py  service.py
backend/app/ratings/: router.py  schemas.py  service.py
backend/app/reviews/: router.py  schemas.py  service.py
backend/app/treasury/: router.py  schemas.py  service.py
backend/app/tx/: router.py  schemas.py  service.py
backend/tests/: conftest.py  test_auth.py  test_chain_sync.py  test_config_security.py  test_db_layer.py  test_e2e_flow.py  test_maps.py  test_marketplace.py  test_pricing.py  test_ratings_location.py  test_treasury.py  test_tx.py  test_tx_service_unit.py
cache/: solidity-files-cache.json  test-failures
contracts/: GAS_REPORT.md  README.md
contracts/src/: Carpool.sol
contracts/test/: Carpool.legacy.t.sol.bak  (+2 more)
frontend/: .env.example  AGENTS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
reports/: coverage-report.txt  gas-optimization-explanation.md  gas-report.txt  lcov.info
test/: Carpool.t.sol  GasComparison.t.sol
(+27 files in other folders)
